# pyfrc-2025

./: .gitignore  Makefile  README.md
robot/: physics.py  pyproject.toml  requirements.txt  robot.py  version.py
robot/deploy/fields/: 2024-crescendo.json  2025-reefscape.json
robot/deploy/pathplanner/: navgrid.json  settings.json
robot/frc_2025/: constants.py  field-2025.py  field.py  reefscape.py  robotcontainer.py  swerveutils.py
robot/frc_2025/commands/: holonomicdrive.py
robot/frc_2025/commands/swervedrive/auto/: auto_balance_command.py
robot/frc_2025/commands/swervedrive/drivebase/: absolute_drive.py  absolute_drive_adv.py  absolute_field_drive.py
robot/frc_2025/subsystems/: alge_subsystem.py  constants.py  coral_intake.py  elevator_subsystem.py
robot/frc_2025/subsystems/swervedrive/: constants.py  drivesubsystem.py  maxswervemodule.py  swerve_subsystem_previos.py
robot/lib_6107/: timedcommandloggedrobot.py
robot/lib_6107/commands/: _command_template.py  aimtodirection.py  gotopoint.py  jerkey_trajectory.py  reset_xy.py  swervetopoint.py  trajectory.py
robot/lib_6107/commands/camera/: follow_object.py
robot/lib_6107/commands/drivetrain/: aimtodirection.py  approach_tag.py  gotopoint.py  swervetopoint.py  trajectory.py
robot/lib_6107/subsystems/: limelight_camera.py  limelight_localizer.py  photon_localizer.py  photontag_camera.py  photonvision_camera.py  swerve_constants.py
robot/lib_6107/subsystems/gyro/: gyro.py  navx.py  pigeon2.py
robot/lib_6107/subsystems/pykit/: gyro_io.py  swervedrive_io.py
robot/util/pykit/: autolog.py  loggedrobot.py  logger.py  logtable.py  logvalue.py
robot/util/pykit/inputs/: loggableds.py  loggablepowerdistribution.py
robot/util/pykit/networktables/: loggeddashboardchooser.py
robot/util/pykit/wpilog/: wpilogreader.py  wpilogwriter.py
