# ------------------------------------------------------------------------ #
#      o-o      o                o                                         #
#     /         |                |                                         #
#    O     o  o O-o  o-o o-o     |  oo o--o o-o o-o                        #
#     \    |  | |  | |-' |   \   o | | |  |  /   /                         #
#      o-o o--O o-o  o-o o    o-o  o-o-o--O o-o o-o                        #
#             |                           |                                #
#          o--o                        o--o                                #
#                        o--o      o         o                             #
#                        |   |     |         |  o                          #
#                        O-Oo  o-o O-o  o-o -o-    o-o o-o                 #
#                        |  \  | | |  | | |  |  | |     \                  #
#                        o   o o-o o-o  o-o  o  |  o-o o-o                 #
#                                                                          #
#    Jemison High School - Huntsville Alabama                              #
# ------------------------------------------------------------------------ #
[project]
name = "pyfrc-2026"
version = "0.1.0"
description = "Team 6107 FRC Robot Code"
readme = "README.md"
requires-python = "==3.14"
dependencies = [
    "wpilib>=2026.1.1",
    "robotpy-pykit>=0.2.3",
    "robotpy-pykit-watch>=0.2.0",
    "robotpy-halsim-gui>=2026.1.1",
    "robotpy>=2026.1.1",
    "robotpy-cli>=2026.1.1",
    "robotpy-pathplannerlib>=2026.1.1",
    "phoenix6>=26.1.0",
    "robotpy-navx>=2025.0.1.2",
    "robotpy-rev>=2026.0.0",
    "robotpy-commands-v2>=2026.1.1",
]
# Use this configuration file to control what RobotPy packages are installed
# on your RoboRIO
#
[tool.robotpy]

# Version of robotpy this project depends on
robotpy_version = "2026.1.1"

# Which extra RobotPy components should be installed
# -> equivalent to `pip install robotpy[extra1, ...]
components = [
    # "all",
    "apriltag",
    "commands2",
    # "cscore",
    "navx",
    "pathplannerlib",
    "phoenix6",
    "rev",
    # "romi",
    "sim",
    # "xrp",
]

# Other pip packages to install
requires = [
    "pynetworktables",
    "photonlibpy",
    "pyntcore",
    "robotpy-pykit>=1.0.1",
    "robotpy-pykit-watch>=1.0.0"
]

# List of paths to include
include_paths = [
    "util",
    "frc_2025",
    "lib_6107"
]
